force-app/main/default/objects/passport__c/passport__c.object-meta.xml
<CustomObject>
    <label>passport</label>
    <nameField>
        <displayFormat>pasid-{0000000}</displayFormat>
        <label>passport id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>passports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>