force-app/main/default/objects/passport__c/fields/appliacnt_message__c.field-meta.xml
<CustomField>
    <fullName>appliacnt_message__c</fullName>
    <label>appliacnt message</label>
    <type>TextArea</type>
</CustomField>