force-app/main/default/objects/passport__c/fields/applicant__c.field-meta.xml
<CustomField>
    <fullName>applicant__c</fullName>
    <label>applicant</label>
    <referenceTo>applicant__c</referenceTo>
    <relationshipLabel>passports</relationshipLabel>
    <relationshipName>passports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>