force-app/main/default/objects/passport__c/fields/avg__c.field-meta.xml
<CustomField>
    <fullName>avg__c</fullName>
    <formula>s1__c  +  s2__c  +  s3__c  +  s4__c  / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>avg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>