force-app/main/default/objects/passport__c/fields/expairy_date__c.field-meta.xml
<CustomField>
    <fullName>expairy_date__c</fullName>
    <formula>ADDMONTHS( issue_date__c ,120)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>expairy date</label>
    <type>Date</type>
</CustomField>