force-app/main/default/objects/passport__c/fields/issue_date__c.field-meta.xml
<CustomField>
    <fullName>issue_date__c</fullName>
    <label>issue date</label>
    <type>Date</type>
</CustomField>