force-app/main/default/objects/passport__c/fields/passport_number__c.field-meta.xml
<CustomField>
    <fullName>passport_number__c</fullName>
    <label>passport number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>