force-app/main/default/objects/passport__c/fields/s1__c.field-meta.xml
<CustomField>
    <fullName>s1__c</fullName>
    <label>s1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>