force-app/main/default/objects/passport__c/fields/s2__c.field-meta.xml
<CustomField>
    <fullName>s2__c</fullName>
    <label>s2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>