force-app/main/default/objects/passport__c/fields/s3__c.field-meta.xml
<CustomField>
    <fullName>s3__c</fullName>
    <label>s3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>